--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
 
       - name: Sync website files to S3 bucket
         run: |
-          aws s3 sync /staticweb s3://staticwebsite-ka
+          aws s3 sync ./deploy s3://staticwebsite-ka
