--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Sync website files to S3 bucket
         run: |
-          aws s3 sync ./deploy/ s3://staticwebsite-ka
+          run: aws s3 sync ./deploy/ s3://staticwebsite-ka
